--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=3003
 MONGODB_URI='mongodb+srv://Fullstack2020:td4AUzQAckaeswPb33fefoiTfw9RZ7@cluster0.jfyg6.mongodb.net/blog-app?retryWrites=true&w=majority'
 TEST_MONGODB_URI='mongodb+srv://Fullstack2020:td4AUzQAckaeswPb33fefoiTfw9RZ7@cluster0.jfyg6.mongodb.net/blog-app-test?retryWrites=true&w=majority'
+SECRET=qwerty
